--- a/src/resources/sass/builder/tools/btn.scss
+++ b/src/resources/sass/builder/tools/btn.scss
@@ -1,28 +1,53 @@
+// .btn{
+//     position: relative;
+//     min-width: 80px;
+//     padding:3px 5px;
+//     font-size: .9em;
+//     background-color: var(--green);
+//     color:var(--green-txt);
+//     border-radius: 3px;
+//     cursor: pointer;
+//     border:none;
+//     outline: none;
+//     transition-duration: .1s;
+//     border:1.5px solid transparent;
+//     display:flex;
+//     align-items: center;
+//     justify-content: center;
+//     font-family: 'Nunito','inter','Tajawal', sans-serif;
+//     box-shadow: 0 0 1px 0px var(--green-30);
+// }
+// .btn:hover{
+//     background-color: var(--green-80);
+// }
+// .btn:active{
+//     background-color: var(--green);
+// }
 .btn{
-    position: relative;
-    min-width: 80px;
-    padding:3px 5px;
-    font-size: .9em;
-    background-color: var(--green);
-    color:var(--green-txt);
-    border-radius: 3px;
+    // width: calc(100% - 20px);
+    min-width:100px;
+    box-sizing: border-box;
+    margin: 5px 10px;
+    padding: 5px 10px;
+    background-color: transparent;
+    border: 1px solid var(--green-90);
+    color: var(--green-90);
     cursor: pointer;
-    border:none;
-    outline: none;
-    transition-duration: .1s;
-    border:1.5px solid transparent;
+    font-family: 'Nunito','inter','Tajawal', sans-serif;
+    font-size: 1em;
+    border-radius: 5px;
+    position: relative;
     display:flex;
     align-items: center;
     justify-content: center;
-    font-family: 'Nunito','inter','Tajawal', sans-serif;
-    box-shadow: 0 0 1px 0px var(--green-30);
 }
 .btn:hover{
-    background-color: var(--green-80);
+    background-color: var(--green-10);
 }
 .btn:active{
-    background-color: var(--green);
+    background-color: var(--green-5);
 }
+
 //
 .btn-cancel{
     background-color:var(--white);
@@ -70,14 +95,14 @@
 }
 //
 .btn:disabled{
-    background-color: var(--white-4);
+    background-color: var(--shdw-40);
     color: var(--white-10);
     cursor: not-allowed;
-    border:1.5px solid  var(--white-4);
+    border:1.5px solid  var(--shdw-40);
 }
 .btn:disabled:hover{
-    background-color: var(--white-4);
+    background-color: var(--shdw-40);
 }
 .btn:disabled:active{
-    background-color: var(--white-4);
+    background-color: var(--shdw-40);
 }
