--- a/src/resources/sass/builder/tools/popup.scss
+++ b/src/resources/sass/builder/tools/popup.scss
@@ -20,10 +20,10 @@
     background-color: var(--white);
     color:var(--txt-1);
     border-radius: 3px;
+    height: 900px;
+    width: 1000px;
     max-width:calc(100% - 20px);
     max-height:calc(100% - 20px);
-    // height:800px;
-    // width: 800px;;
     margin:10px;
     animation:300ms popupAnimation_enter 1 0s ease;
     display:flex;
@@ -83,9 +83,10 @@
 }
 .popupBody{
     padding:10px;
-    width:calc(100% - 20px);
-    max-width:calc(100% - 20px);
-    height:calc(100% - 20px);
-    overflow-x: auto;
-    overflow-y: auto;
+    box-sizing: border-box;
+    width:100%;
+    height:100%;
+    // max-width:calc(100%);
+    // height:calc(100% - 20px);
+    overflow: auto;
 }
