--- a/src/resources/sass/builder/tools/selectors/inputList.scss
+++ b/src/resources/sass/builder/tools/selectors/inputList.scss
@@ -1,4 +1,4 @@
-.inputList_container{
+.inputList_container, .inputList_container_no_action{
     display:flex;
     align-items: center;
     justify-content: space-between;
@@ -24,13 +24,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    z-index: 185;
+    z-index: 210;
     border-radius: 3px;
     max-height:200px;
     overflow: auto;;
 }
 .inputList_elems div:nth-child(1){border: none;}
-.inputList_elem{
+.inputList_elem, .inputList_elem_no_action{
     padding:3px;
     width:calc(100%);
     border-top:1px solid var(--white-4);
@@ -40,6 +40,6 @@
     flex-shrink: 0;
     font-size: .8em;
 }
-.inputList_elem:hover{
+.inputList_elem:hover, .inputList_elem_no_action:hover{
     background-color: var(--white-2);
 }
