--- a/src/resources/sass/style/style.scss
+++ b/src/resources/sass/style/style.scss
@@ -54,6 +54,8 @@
 .td200{transition-duration: 200ms;}
 
 .ofCover{object-fit: cover;}
+.ofContain{object-fit: contain;}
+.imgPL{object-position:left;}
 .blackWhite{filter:grayscale(100%)}
 
 .pointer_events_none{pointer-events: none;}
