--- a/src/resources/sass/builder/website_style/page_setup.scss
+++ b/src/resources/sass/builder/website_style/page_setup.scss
@@ -6,6 +6,7 @@
     border-bottom:1px solid var(--white-2);
     padding:5px;
 }
+.page_setup_row > div:nth-child(1){white-space: nowrap;}
 .page_setup_row:hover{background-color: var(--white-2);}
 //
 
