--- a/src/resources/sass/builder/builder.scss
+++ b/src/resources/sass/builder/builder.scss
@@ -142,20 +142,20 @@ a:hover{
     box-shadow: none !important;
     .section_btns_container{display: none !important}
     .add_home_section{display: none !important;}
-    .home_section_elements_container{outline: none !important;box-shadow: none !important;}
-    .home_section_elements_container:hover{outline: none !important;box-shadow: none !important;}
-    .home_section_container{outline: none !important;box-shadow: none !important;}
-    .home_section_container:hover{outline: none !important;box-shadow: none !important;}
+    .section_elements_wrapper{outline: none !important;box-shadow: none !important;}
+    .section_elements_wrapper:hover{outline: none !important;box-shadow: none !important;}
+    .section_wrapper{outline: none !important;box-shadow: none !important;}
+    .section_wrapper:hover{outline: none !important;box-shadow: none !important;}
 }
 .section_clear:hover{
     outline: none !important;
     box-shadow: none !important;
     .section_btns_container{display: none !important}
     .add_home_section{display: none !important;}
-    .home_section_elements_container{outline: none !important;box-shadow: none !important;}
-    .home_section_elements_container:hover{outline: none !important;box-shadow: none !important;}
-    .home_section_container{outline: none !important;box-shadow: none !important;}
-    .home_section_container:hover{outline: none !important;box-shadow: none !important;}
+    .section_elements_wrapper{outline: none !important;box-shadow: none !important;}
+    .section_elements_wrapper:hover{outline: none !important;box-shadow: none !important;}
+    .section_wrapper{outline: none !important;box-shadow: none !important;}
+    .section_wrapper:hover{outline: none !important;box-shadow: none !important;}
 }
 ///
 .save_btn{
