--- a/src/resources/sass/help/pages/article.scss
+++ b/src/resources/sass/help/pages/article.scss
@@ -130,6 +130,8 @@
     object-fit: contain;
     height:auto;
     cursor: zoom-in;
+    margin-top:40px;
+    margin-bottom:40px;
 }
 .fullScreenImgcontainer{
     position: fixed;
