--- a/src/resources/sass/builder/icons/_icons.scss
+++ b/src/resources/sass/builder/icons/_icons.scss
@@ -184,6 +184,9 @@
 .ico-bold:before {
   content: "\e93d";
 }
+.ico-font_size:before {
+  content: "\e96d";
+}
 .ico-mobile:before {
   content: "\e903";
 }
