--- a/src/resources/sass/builder/website_style/fonts.scss
+++ b/src/resources/sass/builder/website_style/fonts.scss
@@ -1,3 +1,4 @@
+///latin
 @font-face {font-family: 'AndadaPro';src: url('/storage/builder_fonts/latin/AndadaPro.ttf') format("truetype");}
 @font-face {font-family: 'Bitter';src: url('/storage/builder_fonts/latin/Bitter.ttf') format("truetype");}
 @font-face {font-family: 'BodoniModa';src: url('/storage/builder_fonts/latin/BodoniModa.ttf') format("truetype");}
@@ -143,3 +144,50 @@
 @font-face {font-family: 'WalterTurncoat';src: url('/storage/builder_fonts/latin/WalterTurncoat.ttf') format("truetype");}
 @font-face {font-family: 'ZenLoop';src: url('/storage/builder_fonts/latin/ZenLoop.ttf') format("truetype");}
 @font-face {font-family: 'Zeyada';src: url('/storage/builder_fonts/latin/Zeyada.ttf') format("truetype");}
+
+//arabic
+@font-face {font-family: 'Alexandria_arabic';src: url('/storage/builder_fonts/arabic/Alexandria_arabic.ttf') format("truetype");}
+@font-face {font-family: 'Cairo_arabic';src: url('/storage/builder_fonts/arabic/Cairo_arabic.ttf') format("truetype");}
+@font-face {font-family: 'Changa_arabic';src: url('/storage/builder_fonts/arabic/Changa_arabic.ttf') format("truetype");}
+@font-face {font-family: 'ElMessiri';src: url('/storage/builder_fonts/arabic/ElMessiri.ttf') format("truetype");}
+@font-face {font-family: 'Kufam';src: url('/storage/builder_fonts/arabic/Kufam.ttf') format("truetype");}
+@font-face {font-family: 'Lemonada_arabic';src: url('/storage/builder_fonts/arabic/Lemonada_arabic.ttf') format("truetype");}
+@font-face {font-family: 'Mada';src: url('/storage/builder_fonts/arabic/Mada.ttf') format("truetype");}
+@font-face {font-family: 'Marhey_arabic';src: url('/storage/builder_fonts/arabic/Marhey_arabic.ttf') format("truetype");}
+@font-face {font-family: 'NotoNastaliqUrdu';src: url('/storage/builder_fonts/arabic/NotoNastaliqUrdu.ttf') format("truetype");}
+@font-face {font-family: 'ReemKufi';src: url('/storage/builder_fonts/arabic/ReemKufi.ttf') format("truetype");}
+
+//chinese
+@font-face {font-family: 'MaShanZheng';src: url('/storage/builder_fonts/chinese/MaShanZheng.ttf') format("truetype");}
+@font-face {font-family: 'NotoSansHK';src: url('/storage/builder_fonts/chinese/NotoSansHK.ttf') format("truetype");}
+@font-face {font-family: 'ZCOOLQingKeHuangYou';src: url('/storage/builder_fonts/chinese/ZCOOLQingKeHuangYou.ttf') format("truetype");}
+@font-face {font-family: 'ZhiMangXing';src: url('/storage/builder_fonts/chinese/ZhiMangXing.ttf') format("truetype");}
+@font-face {font-family: 'ChocolateClassicalSans';src: url('/storage/builder_fonts/chinese/ChocolateClassicalSans.ttf') format("truetype");}
+
+//japanese
+@font-face {font-family: 'Murecho';src: url('/storage/builder_fonts/japanese/Murecho.ttf') format("truetype");}
+@font-face {font-family: 'NotoSerifJP';src: url('/storage/builder_fonts/japanese/NotoSerifJP.ttf') format("truetype");}
+@font-face {font-family: 'RampartOne';src: url('/storage/builder_fonts/japanese/RampartOne.ttf') format("truetype");}
+@font-face {font-family: 'MPLUS1p';src: url('/storage/builder_fonts/japanese/MPLUS1p.ttf') format("truetype");}
+
+//korean
+@font-face {font-family: 'NotoSerifKR';src: url('/storage/builder_fonts/korean/NotoSerifKR.ttf') format("truetype");}
+@font-face {font-family: 'Hahmlet_korean';src: url('/storage/builder_fonts/korean/Hahmlet_korean.ttf') format("truetype");}
+
+//cyrillic
+@font-face {font-family: 'Caveat';src: url('/storage/builder_fonts/cyrillic/Caveat.ttf') format("truetype");}
+@font-face {font-family: 'Manrope';src: url('/storage/builder_fonts/cyrillic/Manrope.ttf') format("truetype");}
+@font-face {font-family: 'Nunito_cyrillic';src: url('/storage/builder_fonts/cyrillic/Nunito_cyrillic.ttf') format("truetype");}
+@font-face {font-family: 'Oswald_cyrillic';src: url('/storage/builder_fonts/cyrillic/Oswald_cyrillic.ttf') format("truetype");}
+@font-face {font-family: 'YanoneKaffeesatz';src: url('/storage/builder_fonts/cyrillic/YanoneKaffeesatz.ttf') format("truetype");}
+
+//greek
+@font-face {font-family: 'Brygada1918_greek';src: url('/storage/builder_fonts/greek/Brygada1918_greek.ttf') format("truetype");}
+@font-face {font-family: 'Comfortaa_greek';src: url('/storage/builder_fonts/greek/Comfortaa_greek.ttf') format("truetype");}
+@font-face {font-family: 'SofiaSansCondensed';src: url('/storage/builder_fonts/greek/SofiaSansCondensed.ttf') format("truetype");}
+@font-face {font-family: 'Vollkorn_greek';src: url('/storage/builder_fonts/greek/Vollkorn_greek.ttf') format("truetype");}
+
+//indian
+@font-face {font-family: 'NotoSans_indian';src: url('/storage/builder_fonts/indian/NotoSans_indian.ttf') format("truetype");}
+@font-face {font-family: 'TiroDevanagariHindi';src: url('/storage/builder_fonts/indian/TiroDevanagariHindi.ttf') format("truetype");}
+@font-face {font-family: 'BalooDa2';src: url('/storage/builder_fonts/indian/BalooDa2.ttf') format("truetype");}
