--- a/src/resources/sass/builder/tools/editor_popup.scss
+++ b/src/resources/sass/builder/tools/editor_popup.scss
@@ -103,7 +103,10 @@
     padding:15px;
     cursor: pointer;
     margin-right:-1px;
-    color:var(--white-11)
+    color:var(--white-11);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .editor_popup_body_shortcut:hover{
     background-color: var(--white-3);
