--- a/src/resources/sass/builder/website/website.scss
+++ b/src/resources/sass/builder/website/website.scss
@@ -21,13 +21,13 @@
 
 a {
     color: unset;
-    text-decoration: unset;
+    text-decoration: underline;
     cursor: pointer;
 }
 
 a:hover {
     color: unset;
-    text-decoration: unset;
+    text-decoration: underline;
     cursor: pointer;
 }
 
